# ariya-icons

./: CMakeLists.txt  CPackConfig.cmake  README  index.theme  missing.py  optimize.sh  unscale.py  unscale.sh
128x128/actions/: application-exit.svgz  arrow-down-double.svgz  arrow-left-double.svgz  arrow-left.svgz  arrow-up.svgz  bookmark-new-list.svgz  character-set.svgz  configure-toolbars.svgz  dialog-ok.svgz  document-close.svgz  document-decrypt.svgz  document-edit.svgz  document-encrypt.svgz  document-open-recent.svgz  document-preview-archive.svgz  document-preview.svgz  document-print-direct.svgz  document-print-preview.svgz  document-revert.svgz  document-save-as.svgz  document-sign.svgz  draw-text.svgz  edit-clear-history.svgz  edit-clear-locationbar-ltr.svgz  edit-find-mail.svgz  edit-find.svgz  edit-rename.svgz  flag-black.svgz  flag-blue.svgz  flag-green.svgz  flag-red.svgz  fork.svgz  format-text-color.svgz  games-config-background.svgz  games-config-board.svgz  games-config-custom.svgz  games-config-options.svgz  games-config-tiles.svgz  games-difficult.svgz  games-hint.svgz  (+98 more)
128x128/apps/: Charm.svgz  accessories-calculator.svgz  accessories-character-map.svgz  accessories-text-editor.svgz  acroread.svgz  akregator.svgz  help-browser.svgz  internet-mail.svgz  internet-web-browser.svgz  kaffeine.svgz  kcolorchooser.svgz  kde-windows.svgz  kgpg.svz  kig.svgz  kmag.svgz  kmail2.svgz  knewsticker.svgz  knotes.svgz  kontact-import-wizard.svgz  korgac.svgz  kpresenter.svgz  krdc.svgz  krfb.svgz  ksniffer.svgz  kspread.svgz  ktip.svgz  kuickshow.svgz  kverbos.svgz  kwalletmanager.svgz  kword.svgz  lokalize.svgz  multimedia-volume-control.svgz  nepomuk.svgz  okteta.svgz  oxygen.svgz  picmi.svgz  planner.svgz  plasma.svgz  preferences-contact-list.svgz  preferences-desktop-cryptography.svgz  (+24 more)
128x128/categories/: applications-development-translation.svgz  applications-education-language.svgz  applications-education-miscellaneous.svgz  applications-education-school.svgz  applications-education-university.svgz  applications-engineering.svgz  applications-games.svgz  applications-graphics.svgz  applications-internet.svgz  applications-office.svgz  applications-science.svgz  preferences-other.svgz  preferences-system-network.svgz
128x128/devices/: camera-photo.svgz  computer.svgz  cpu.svgz  drive-optical.svgz  drive-removable-media.svgz  input-keyboard.svgz  media-flash-memory-stick.svgz  media-optical-data.svgz  media-optical-dvd-video.svgz  media-optical-recordable.svgz  media-optical-video.svgz  multimedia-player-apple-ipod.svgz  multimedia-player.svgz  network-wireless-connected-00.svgz  network-wireless-connected-50.svgz  network-wireless-connected-75.svgz  network-wireless-disconnected.svgz  pda.svgz  phone.svgz  printer-laser.svgz  scanner.svgz
128x128/emblems/: emblem-encrypted-unlocked.svgz  emblem-favorite.svgz  emblem-symbolic-link.svgz  emblem-unlocked.svgz  image-has-versions.svgz  image-stack.svgz  vcs-locally-modified.svgz  vcs-normal.svgz  vcs-removed.svgz  vcs-update-required.svgz
128x128/emotes/: face-angel.svgz  face-laugh.svgz  face-plain.svgz  face-sad.svgz  face-smile-big.svgz  face-smile.svgz  face-wink.svgz
128x128/places/: folder.svgz  (+26 more)
(+4264 files in other folders)
